--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ authors = ["Willy Micieli"]
 [dependencies]
 cargo_metadata = "0.18.1"
 chrono = "0.4.38"
+git2 = "0.19.0"
 inquire = "0.7.5"
+tabled = "0.15.0"
