--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ authors = ["Willy Micieli"]
 [dependencies]
 cargo_metadata = "0.18.1"
 chrono = "0.4.38"
+colored = "2.1.0"
 git2 = "0.19.0"
 inquire = "0.7.5"
 walkdir = "2.5.0"
