--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: deps 
-      run: sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin curl fd-find git docker-buildx-plugin packer && packer plugins install github.com/hashicorp/docker
+      run: sudo apt-get install -y curl && curl -fsSL https://get.docker.com -o get-docker.sh && bash get-docker.sh  && apt-get install -y d curl fd-find git packer && packer plugins install github.com/hashicorp/docker
     - name: continuous
       run: git clone https://github.com/taishingi/continuous-template.git continuous && cd continuous/rust && ./scripts-gen "github.com" "otechdo" "zazen" "${GITHUB_REF##*/}" "4" && packer validate . && packer build .
