--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ cargo_metadata = "0.18.1"
 chrono = "0.4.38"
 colored = "2.1.0"
 git2 = "0.19.0"
+indicatif = "0.17.8"
 inquire = "0.7.5"
 walkdir = "2.5.0"
