--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,19 @@ edition = "2021"
 description = "a tool to manage your git repositories"
 repository = "https://github.com/otechdo/zazen"
 homepage = "https://github.com/otechdo/zazen/wiki"
-license-file = "LICENSE"
+license = "MIT"
 readme = "README.md"
 categories = ["development-tools"]
 keywords = ["git", "cargo", "github", "commit", "management"]
 authors = ["Willy Micieli"]
+
 [dependencies]
 cargo_metadata = "0.18.1"
 chrono = "0.4.38"
 colored = "2.1.0"
+colored_truecolor = "0.1.0"
 git2 = "0.19.0"
+ignore = "0.4.22"
 indicatif = "0.17.8"
-inquire = "0.7.5"
+inquire = { version = "0.7.5", features = ["date"] }
 walkdir = "2.5.0"
